Ensure that button text is center-aligned

--- a/ClientSide/StyleSheets/Button.less
+++ b/ClientSide/StyleSheets/Button.less
@@ -52,6 +52,7 @@ input[type=submit], input[type=reset], input[type=button], a.pwt-Button, button
 	display: inline-block;
 	text-decoration: none !important;
 	cursor: default;
+	text-align: center;
 	
 	&:hover
 	{
